syntax = "proto3";

package bus;

service BusService {
  rpc FindOne (BusById) returns (Bus);
  rpc FindMany (Location) returns (stream Bus);
}

message BusById {
  int32 id = 1;
}

message Bus {
  int32 id = 1;
  float latitude = 2;
  float longitude = 3 ;
  float timestamp = 4;
}

message NoParam {}

message Location {
  float latitude = 1;
  float longitude = 2 ;
}